# ai_email_support

./: .env.example  .gitignore  LICENSE  README.md  ingest.py  main.py  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: ai_service.py  embedding_service.py  escalation_logger.py  retrieval_service.py
docs/: BUILD_TASKS.md  IMPLEMENTATION_RULES.md  SYSTEM_BUILD.md
