[project]
name = "srl-email-support"
version = "0.1.0"
description = "AI-powered apartment guest email support system with FAQ and policy document retrieval"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "openai>=2.32.0",
    "openpyxl>=3.1.5",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "supabase>=2.28.3",
    "uvicorn>=0.45.0",
]
